--- a/202110/ProgEst02/ProgEst02.cbp
+++ b/202110/ProgEst02/ProgEst02.cbp
@@ -15,12 +15,91 @@
 					<Add option="-g" />
 				</Compiler>
 			</Target>
+			<Target title="01_MaxDTresEnteros">
+				<Option output="bin/01_MaxDTresEnteros/ProgEst02" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/01_MaxDTresEnteros/" />
+				<Option object_output="obj/01_MaxDTresEnteros/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
+			</Target>
+			<Target title="02_BloomTax">
+				<Option output="bin/02_BloomTax/ProgEst02" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/02_BloomTax/" />
+				<Option object_output="obj/02_BloomTax/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
+			</Target>
+			<Target title="00_01_Arreglos">
+				<Option output="bin/00_01_Arreglos/ProgEst02" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/00_01_Arreglos/" />
+				<Option object_output="obj/00_01_Arreglos/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
+			</Target>
+			<Target title="00_02_Burbuja">
+				<Option output="bin/00_02_Burbuja/ProgEst02" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/00_02_Burbuja/" />
+				<Option object_output="obj/00_02_Burbuja/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
+		<Unit filename="00_01_Arreglos/arreglos_unidimensionales.c">
 			<Option compilerVar="CC" />
+			<Option target="00_01_Arreglos" />
+		</Unit>
+		<Unit filename="00_02_Burbuja/sort_burbuja.c">
+			<Option compilerVar="CC" />
+			<Option target="00_02_Burbuja" />
+		</Unit>
+		<Unit filename="01_MaxDTresEnteros/MaxDTresEnteros.c">
+			<Option compilerVar="CC" />
+			<Option target="01_MaxDTresEnteros" />
+		</Unit>
+		<Unit filename="02_BloomTax/BloomTax.c">
+			<Option compilerVar="CC" />
+			<Option target="02_BloomTax" />
+		</Unit>
+		<Unit filename="02_BloomTax/BloomTax.h">
+			<Option target="02_BloomTax" />
+		</Unit>
+		<Unit filename="02_BloomTax/TestBloomTax.c">
+			<Option compilerVar="CC" />
+			<Option target="02_BloomTax" />
+		</Unit>
+		<Unit filename="02_BloomTax/lines_arr.c">
+			<Option compilerVar="CC" />
+			<Option target="02_BloomTax" />
+		</Unit>
+		<Unit filename="02_BloomTax/lines_arr.h">
+			<Option target="02_BloomTax" />
 		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
