--- a/202110/ProgEst02/ProgEst02.cbp
+++ b/202110/ProgEst02/ProgEst02.cbp
@@ -132,84 +132,107 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="00_08_MatrizInversa">
+				<Option output="bin/00_08_MatrizInversa/ProgEst02" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="bin/00_08_MatrizInversa/" />
+				<Option object_output="obj/00_08_MatrizInversa/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-O2" />
+					<Add directory="include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Linker>
+			<Add option="-lm" />
+		</Linker>
 		<Unit filename="00_01_Arreglos/arreglos_unidimensionales.c">
 			<Option compilerVar="CC" />
 			<Option target="00_01_Arreglos" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="00_02_Burbuja/sort_burbuja.c">
 			<Option compilerVar="CC" />
 			<Option target="00_02_Burbuja" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="00_04_SumaDVectores/SumaDVectores.c">
 			<Option compilerVar="CC" />
 			<Option target="00_04_SumaDVectores" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="00_06_Traspuesta/TraspuestaDMatrices.c">
 			<Option compilerVar="CC" />
 			<Option target="00_06_Traspuesta" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="00_07_Determinantes/determinante.c">
-			<Option compilerVar="CC" />
-			<Option target="00_07_Determinantes" />
-		</Unit>
-		<Unit filename="00_07_Determinantes/determinantes.c">
 			<Option compilerVar="CC" />
 			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="00_07_MatrizInversa_M3x3/MatrizInversaM3x3.c">
 			<Option compilerVar="CC" />
 			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="00_07_Submatrices/Submatrices.c">
 			<Option compilerVar="CC" />
 			<Option target="00_07_Submatrices" />
 		</Unit>
+		<Unit filename="00_08_MatrizInversa/Test_inverse_matrix.c">
+			<Option compilerVar="CC" />
+			<Option target="00_08_MatrizInversa" />
+		</Unit>
+		<Unit filename="00_08_MatrizInversa/copy_matriz.c">
+			<Option compilerVar="CC" />
+			<Option target="00_08_MatrizInversa" />
+		</Unit>
+		<Unit filename="00_08_MatrizInversa/det.c">
+			<Option compilerVar="CC" />
+			<Option target="00_08_MatrizInversa" />
+		</Unit>
+		<Unit filename="00_08_MatrizInversa/get_traspose.c">
+			<Option compilerVar="CC" />
+			<Option target="00_08_MatrizInversa" />
+		</Unit>
+		<Unit filename="00_08_MatrizInversa/inverse_matrix.c">
+			<Option compilerVar="CC" />
+			<Option target="00_08_MatrizInversa" />
+		</Unit>
+		<Unit filename="00_08_MatrizInversa/print_matriz.c">
+			<Option compilerVar="CC" />
+			<Option target="00_08_MatrizInversa" />
+		</Unit>
+		<Unit filename="00_08_MatrizInversa/sub_matrix.c">
+			<Option compilerVar="CC" />
+			<Option target="00_08_MatrizInversa" />
+		</Unit>
 		<Unit filename="01_MaxDTresEnteros/MaxDTresEnteros.c">
 			<Option compilerVar="CC" />
 			<Option target="01_MaxDTresEnteros" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="02_BloomTax/BloomTax.c">
 			<Option compilerVar="CC" />
 			<Option target="02_BloomTax" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="02_BloomTax/BloomTax.h">
 			<Option target="02_BloomTax" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="02_BloomTax/TestBloomTax.c">
 			<Option compilerVar="CC" />
 			<Option target="02_BloomTax" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="02_BloomTax/lines_arr.c">
 			<Option compilerVar="CC" />
 			<Option target="02_BloomTax" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
 		</Unit>
 		<Unit filename="02_BloomTax/lines_arr.h">
 			<Option target="02_BloomTax" />
-			<Option target="00_07_MatrizInversa" />
-			<Option target="00_07_Determinantes" />
+		</Unit>
+		<Unit filename="include/struct_matriz.h">
+			<Option target="00_08_MatrizInversa" />
 		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
