--- a/UNIDAD00/00PracticaTestingKconfig/.config
+++ b/UNIDAD00/00PracticaTestingKconfig/.config
@@ -4,4 +4,7 @@
 #
 # CONFIG_EJEMPLO___I is not set
 # CONFIG_EJEMPLO__II is not set
-CONFIG_EJEMPLO_III=y
+# CONFIG_EJEMPLO_III is not set
+# CONFIG_EJEMPLO__IV is not set
+# CONFIG_EJEMPLO___V is not set
+CONFIG_EJEMPLO__VI=y
