--- a/UNIDAD00/00PracticaTestingKconfig/Makefile
+++ b/UNIDAD00/00PracticaTestingKconfig/Makefile
@@ -4,3 +4,5 @@ default:
 menuconfig:
 	kconfig-mconf Kconfig
 	./scripts/kconfig/conf --silentoldconfig Kconfig
+	rm -v obj/Release/*.o 
+#	rm -v obj/Release/*.o bin/Release/*
