--- a/UNIDAD00/00PracticaTestingKconfig/00PracticaTestingKconfig.cbp
+++ b/UNIDAD00/00PracticaTestingKconfig/00PracticaTestingKconfig.cbp
@@ -40,6 +40,22 @@
 			<Option compilerVar="CC" />
 			<Option target="Release" />
 		</Unit>
+		<Unit filename="Ejemplo_3.c">
+			<Option compilerVar="CC" />
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="Ejemplo_4.c">
+			<Option compilerVar="CC" />
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="Ejemplo_5.c">
+			<Option compilerVar="CC" />
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="Ejemplo_6.c">
+			<Option compilerVar="CC" />
+			<Option target="Release" />
+		</Unit>
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
