--- a/UNIDAD00/00PracticaTestingKconfig/Kconfig
+++ b/UNIDAD00/00PracticaTestingKconfig/Kconfig
@@ -15,4 +15,24 @@ config EJEMPLO_III
     bool "Ejemplo 3 programa que muestra el especificador de formato %li (diapositiva 20)"
     default n
     help
-      Se selecciona el programa del ejemplo 3. El programa incluye limits.h con lo que tiene acceso a las macros ULONG_MAX INT_MIN INT_MAX UINT_MAX LONG_MAX.
+      Se selecciona el programa del ejemplo 3. El programa incluye limits.h con lo que 
+      tiene acceso a las macros ULONG_MAX INT_MIN INT_MAX UINT_MAX LONG_MAX.
+
+config EJEMPLO__IV
+    bool "Ejemplo 4 programa que usa caracteres"
+    default n
+    help
+      Se selecciona el programa del ejemplo 4 de la presentaci\'on.
+
+config EJEMPLO___V
+    bool "Ejemplo 5 programa que muestra c\\'omo imprimir en octal"
+    default n
+    help
+      Se selecciona el programa del ejemplo 5 de la presentaci\'on.
+
+config EJEMPLO__VI
+    bool "Ejemplo 6 programa que muestra c\\'omo imprimir en octal"
+    default n
+    help
+      Se selecciona el programa del ejemplo 6 de la presentaci\'on.
+
