--- a/UNIDAD00/00PracticaTestingKconfig/.config
+++ b/UNIDAD00/00PracticaTestingKconfig/.config
@@ -11,9 +11,9 @@
 # CONFIG_EJEMPLO__VI_A is not set
 # CONFIG_EJEMPLO_VII is not set
 # CONFIG_EJEMPLO_VIII is not set
-# CONFIG_EJEMPLO__IX is not set
+CONFIG_EJEMPLO__IX=y
 # CONFIG_EJEMPLO__IX_VERS_I is not set
 # CONFIG_EJEMPLO__IX_VERS_II is not set
 # CONFIG_EJEMPLO__IX_VERS_III is not set
-CONFIG_EJEMPLO___X=y
-# CONFIG_EJEMPLO___X_PRINTF is not set
+# CONFIG_EJEMPLO___X is not set
+# CONFIG_EJEMPLO__XI is not set
