--- a/pre_BdCoonteosDinamicos/pre_BdCoonteosDinamicos.cbp
+++ b/pre_BdCoonteosDinamicos/pre_BdCoonteosDinamicos.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="4_2_4_Arreglo_de_Estructuras" />
+		<Option title="pre_BdCoonteosDinamicos" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/4_2_4_Arreglo_de_Estructuras" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/pre_BdCoonteosDinamicos" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -15,8 +15,8 @@
 					<Add option="-g" />
 				</Compiler>
 			</Target>
-			<Target title="TestStructArray">
-				<Option output="bin/Release/4_2_4_Arreglo_de_Estructuras" prefix_auto="1" extension_auto="1" />
+			<Target title="Release">
+				<Option output="bin/Release/pre_BdCoonteosDinamicos" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -30,17 +30,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-fexceptions" />
 		</Compiler>
-		<Linker>
-			<Add library="IntroProgUtil" />
-			<Add directory="../../IntroProgUtil/bin/Release" />
-		</Linker>
-		<Unit filename="TestArregloDEstructuras.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Unit filename="TestPreBdContDin.cpp" />
 		<Extensions>
 			<code_completion />
-			<envvars />
 			<debugger />
 		</Extensions>
 	</Project>
