--- a/NOTAaboutRAN/NOTAaboutRAN.cbp
+++ b/NOTAaboutRAN/NOTAaboutRAN.cbp
@@ -29,6 +29,10 @@
 		<Unit filename="TestNOTAaboutRAN.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="datos.c">
+			<Option compilerVar="CC" />
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
