--- a/U4_Manejo_de_Apuntadores_y_Estructuras/4_2_4_Arreglo_de_Estructuras/4_2_4_Arreglo_de_Estructuras.cbp
+++ b/U4_Manejo_de_Apuntadores_y_Estructuras/4_2_4_Arreglo_de_Estructuras/4_2_4_Arreglo_de_Estructuras.cbp
@@ -38,10 +38,6 @@
 		<Unit filename="TestArregloDEstructuras.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Extensions>
-			<code_completion />
-			<envvars />
-			<debugger />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
