--- a/Workspace_Evaluaciones_2022_2/2022_2_1MV3_M117_INTRO_PROG/2022_2_1MV3_M117_INTRO_PROG.cbp
+++ b/Workspace_Evaluaciones_2022_2/2022_2_1MV3_M117_INTRO_PROG/2022_2_1MV3_M117_INTRO_PROG.cbp
@@ -38,7 +38,7 @@
 			<Option compilerVar="CC" />
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
-		<Unit filename="Discentes/structs_Discente.c">
+		<Unit filename="Discentes/structs_DiscenteEvaluado.c">
 			<Option compilerVar="CC" />
 			<Option target="Release" />
 		</Unit>
@@ -56,6 +56,9 @@
 			<Option compilerVar="CC" />
 			<Option target="Release" />
 		</Unit>
-		<Extensions />
+		<Extensions>
+			<code_completion />
+			<debugger />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
