--- a/IntroProgUnidad02/.config
+++ b/IntroProgUnidad02/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Configuration
+# RootMenu
 #
 # CONFIG_EJEMPLO__XVII is not set
 # CONFIG_TEST_FOR is not set
