--- a/IntroProgUnidad02/IntroProgUnidad02.cbp
+++ b/IntroProgUnidad02/IntroProgUnidad02.cbp
@@ -66,6 +66,7 @@
 		<Unit filename="Makefile">
 			<Option target="Release" />
 		</Unit>
+		<Unit filename="Makefile_win" />
 		<Unit filename="PO_DiaNumDLab.h">
 			<Option target="Release" />
 		</Unit>
